--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -1,5 +1,8 @@
   location <%= @location %> {
     root  <%= @www_root %>;
+<% if @try_files -%>
+    try_files <% @try_files.each do |try| -%> <%= try %> <% end -%>;
+<% end -%>
     include <%= @fastcgi_params %>;
     fastcgi_pass <%= @fastcgi %>;
 <% unless @fastcgi_script == :undef %>
