--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -2,7 +2,7 @@
     root  <%= @www_root %>;
     include <%= @fastcgi_params %>;
     fastcgi_pass <%= @fastcgi %>;
-<% unless @fastcgi_script == :undef %>
+<% unless @fastcgi_script.nil? %>
     fastcgi_param SCRIPT_FILENAME <%= @fastcgi_script %>;
 <% end -%>
   }
