--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,7 +1,7 @@
 user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
 worker_processes <%= @worker_processes %>;
 
-error_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/error.log;
+error_log  <%= @nginx_error_log %>;
 pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
 
 events {
@@ -14,7 +14,7 @@ http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
 
-  access_log  <%= scope.lookupvar('nginx::params::nx_logdir')%>/access.log;
+  access_log  <%= @http_access_log %>;
 
   sendfile    <%= scope.lookupvar('nginx::params::nx_sendfile')%>;
 
