--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -1,8 +1,8 @@
   location <%= @location %> {
-<% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each do |key,value| -%>
+<% if @location_cfg_prepend -%><% @location_cfg_prepend.sort_by {|k,v| k}.each_line do |key,value| -%>
     <%= key %> <%= value %>;<% end -%><% end -%>
     alias      <%= @location_alias %>;
-<% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
+<% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each_line do |key,value| -%>
     <%= key %> <%= value %>;<% end -%><% end -%>
   }
 
