--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -17,6 +17,9 @@
 <% if @index_files -%>
     index <% @index_files.each do |i| %> <%= i %><% end %>;
 <% end -%>
+<% if @rewrite -%>
+    rewrite <%= @rewrite %>;
+<% end -%>
 <% if defined? auth_basic -%>
     auth_basic           "<%= @auth_basic %>";
 <% end -%>
