--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -4,7 +4,7 @@ client_body_buffer_size <%= scope.lookupvar('nginx::params::nx_client_body_buffe
 proxy_connect_timeout   <%= scope.lookupvar('nginx::params::nx_proxy_connect_timeout') %>;
 proxy_send_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_send_timeout') %>;
 proxy_read_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_read_timeout') %>;
-proxy_buffers           <%= scope.lookupvar('nginx::params::nx_proxy_buffers') %>;
+proxy_buffers           <%= @proxy_buffers %>;
 proxy_http_version      <%= @proxy_http_version %>;
 <% @proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;<% end %>
