--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -5,6 +5,7 @@ proxy_connect_timeout   <%= scope.lookupvar('nginx::params::nx_proxy_connect_tim
 proxy_send_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_send_timeout') %>;
 proxy_read_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_read_timeout') %>;
 proxy_buffers           <%= @proxy_buffers %>;
+proxy_buffer_size       <%= @proxy_buffer_size %>;
 proxy_http_version      <%= @proxy_http_version %>;
 <% @proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;<% end %>
