--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -17,8 +17,8 @@
 <% if @index_files -%>
     index <% @index_files.each do |i| %> <%= i %><% end %>;
 <% end -%>
-<% if @rewrite -%>
-    rewrite <%= @rewrite %>;
+<% @rewrite.each do |rule| -%>
+    rewrite <%= rule %>;
 <% end -%>
 <% if defined? auth_basic -%>
     auth_basic           "<%= @auth_basic %>";
