--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -11,6 +11,9 @@
 <% if not @proxy_method.nil? -%>
     proxy_method        <%= @proxy_method %>;
 <% end -%>
+<% if not @proxy_set_body.nil? -%>
+    proxy_set_body      <%= @proxy_set_body %>;
+<% end -%>
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
