--- a/templates/conf.d/upstream.erb
+++ b/templates/conf.d/upstream.erb
@@ -1,5 +1,5 @@
 upstream <%= @name %> {
-<% if @upstream_cfg_prepend -%><% upstream_cfg_prepend.sort_by{|k,v| k}.each do |key,value| -%>
+<% if @upstream_cfg_prepend -%><% upstream_cfg_prepend.sort_by{|k,v| k}.each do |key,value| %>
   <%= key %> <%= value %>;<% end -%><% end -%>
   <% @members.each do |i| %>
   server     <%= i %>;<% end %>
