--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -17,10 +17,10 @@ server {
   ssl_dhparam               <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/<%= @name.gsub(' ', '_') %>_dhparam.pem;
 <% end -%>
 <% if defined? @ssl_stapling -%>
-  ssl_stapling              "<%= @ssl_stapling %>";
+  ssl_stapling              <%= @ssl_stapling %>;
 <% end -%>
 <% if defined? @ssl_stapling_verify -%>
-  ssl_stapling_verify        "<%= @ssl_stapling_verify %>";
+  ssl_stapling_verify       <%= @ssl_stapling_verify %>;
 <% end -%>
 <% if defined? @ssl_trusted_certificate -%>
   ssl_trusted_certificate    <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/<%= @name.gsub(' ', '_') %>.pem;
