--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -22,7 +22,11 @@ server {
 <% end -%>
 <% if @rewrite_to_https -%>
   if ($ssl_protocol = "") {
-       return 301 https://$host$request_uri;
+    <% if Gem::Version.new(@nginx_version) < Gem::Version.new('0.8.42') -%>
+      rewrite ^ https://$host$request_uri;
+    <% else %>
+      return 301 https://$host$request_uri;
+    <% end -%>
   }
 <% end -%>
 
