--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,5 +1,6 @@
 user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
 worker_processes <%= @worker_processes %>;
+worker_rlimit_nofile <%= @worker_rlimit_nofile %>;
 
 error_log  <%= @nginx_error_log %>;
 pid        <%= scope.lookupvar('nginx::params::nx_pid')%>;
