add extra conditionals for location block

--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -32,5 +32,10 @@
 <% if @location_custom_cfg_append -%><% @location_custom_cfg_append.each do |value| -%>
     <%= value %>
 <% end -%><% end -%>
+
+<% @location_conditions.each do |condition| -%>
+    <%= condition %>
+<% end -%>
+
   }
 
