--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -1,4 +1,4 @@
-proxy_redirect          <%= scope.lookupvar('nginx::params::nx_proxy_redirect') %>;
+proxy_redirect          <%= @proxy_redirect %>;
 client_max_body_size      <%= @client_max_body_size %>;
 client_body_buffer_size <%= scope.lookupvar('nginx::params::nx_client_body_buffer_size') %>;
 proxy_connect_timeout   <%= scope.lookupvar('nginx::params::nx_proxy_connect_timeout') %>;
