--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -33,6 +33,11 @@
 <% end -%>
     proxy_pass          <%= @proxy %>;
     proxy_read_timeout  <%= @proxy_read_timeout %>;
+    proxy_connect_timeout  <%= @proxy_connect_timeout %>;
+    proxy_redirect  <%= @proxy_redirect %>;
+<% @proxy_set_header.each do |header| -%>
+    proxy_set_header        <%= header %>;
+<% end -%>
 <% if @proxy_method -%>
     proxy_method        <%= @proxy_method %>;
 <% end -%>
