--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -32,8 +32,8 @@ server {
 <% if defined? @ssl_trusted_cert -%>
   ssl_trusted_certificate   <%= scope.lookupvar('nginx::params::nx_conf_dir') %>/<%= @name.gsub(' ', '_') %>.trusted.crt;
 <% end -%>
-<% if defined? @resolver -%>
-  resolver                  <%= @resolver %>;
+<% if @resolver.count > 0 -%>
+  resolver                  <% Array(@resolver).each do |r| %> <%= r %><% end %>;
 <% end -%>
 <% if defined? @auth_basic -%>
   auth_basic                "<%= @auth_basic %>";
