--- a/templates/vhost/vhost_location_fastcgi.erb
+++ b/templates/vhost/vhost_location_fastcgi.erb
@@ -5,6 +5,12 @@
 <% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |value| -%>
     <%= value %>
 <% end -%><% end -%>
+<% if @location_allow -%><% location_allow.each do |allow_rule| -%>
+  allow <%= allow_rule %>;
+<% end -%><% end -%>
+<% if @location_deny -%><% @location_deny.each do |deny_rule| -%>
+  deny <%= deny_rule %>;
+<% end -%><% end -%>
 <% if defined? @www_root -%>
     root  <%= @www_root %>;
 <% end -%>
