--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -39,6 +39,10 @@ http {
   proxy_cache_path    <%= @proxy_cache_path %> levels=<%= @proxy_cache_levels %> keys_zone=<%= @proxy_cache_keys_zone %> max_size=<%= @proxy_cache_max_size %> inactive=<%= @proxy_cache_inactive %>;
 <% end -%>
 
+<% if @fastcgi_cache_path -%>
+  fastcgi_cache_path    <%= @fastcgi_cache_path %>;
+<% end -%>
+
 <% if @http_cfg_append -%><% @http_cfg_append.sort_by{|k,v| k}.each do |key,value| -%>
   <%= key %> <%= value %>;
 <% end -%>
