--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -40,7 +40,13 @@ http {
 <% end -%>
 
 <% if @fastcgi_cache_path -%>
-  fastcgi_cache_path    <%= @fastcgi_cache_path %> levels=<%= @fastcgi_cache_levels %> keys_zone=<%= @fastcgi_cache_keys_zone %> max_size=<%= @fastcgi_cache_max_size %> inactive=<%= @fastcgi_cache_inactive %>;
+  fastcgi_cache_path    	<%= @fastcgi_cache_path %> levels=<%= @fastcgi_cache_levels %> keys_zone=<%= @fastcgi_cache_keys_zone %> max_size=<%= @fastcgi_cache_max_size %> inactive=<%= @fastcgi_cache_inactive %>;
+<% end -%>
+<% if @fastcgi_cache_key -%>
+  fastcgi_cache_key		<%= @fastcgi_cache_key %>;
+<% end -%>
+<% if @fastcgi_cache_use_stale -%>
+  fastcgi_cache_use_stale 	<%= @fastcgi_cache_use_stale %>;
 <% end -%>
 
 <% if @http_cfg_append -%><% @http_cfg_append.sort_by{|k,v| k}.each do |key,value| -%>
