Use first server name for non-www redirects to prevent issues with naming of vhosts within defined types.
Signed-off-by: Kalman Olah <kalman@inuits.eu>

--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -19,7 +19,7 @@ include <%= file %>;
 <% if @rewrite_www_to_non_www -%>
 server {
   listen       <%= @listen_ip %>:<%= @listen_port %>;
-  server_name  www.<%= @name.gsub(/^www\./, '') %>;
-  return       301 http://<%= @name.gsub(/^www\./, '') %>$uri;
+  server_name  www.<%= @server_name[0].gsub(/^www\./, '') %>;
+  return       301 http://<%= @server_name[0].gsub(/^www\./, '') %>$uri;
 }
 <% end -%>
