--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,4 +1,10 @@
   location <%= @location %> {
+<% if @location_allow -%><% @location_allow.each do |allow_rule| -%>
+    allow <%= allow_rule %>;
+<% end -%><% end -%>
+<% if @location_deny -%><% @location_deny.each do |deny_rule| -%>
+    deny <%= deny_rule %>;
+<% end -%><% end -%>
 <% if @location_custom_cfg_prepend -%><% @location_custom_cfg_prepend.each do |key,value| -%>
 <% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
 <% Array(subvalue).each do |asubvalue| -%>
