--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,4 +1,6 @@
-user <%= scope.lookupvar('nginx::config::nx_daemon_user') %>;
+<% if @super_user -%>
+user <%= @daemon_user %>;
+<% end -%>
 worker_processes <%= @worker_processes %>;
 worker_rlimit_nofile <%= @worker_rlimit_nofile %>;
 
