--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -1,9 +1,9 @@
 proxy_redirect          <%= @proxy_redirect %>;
 client_max_body_size    <%= @client_max_body_size %>;
-client_body_buffer_size <%= scope.lookupvar('nginx::params::nx_client_body_buffer_size') %>;
-proxy_connect_timeout   <%= scope.lookupvar('nginx::params::nx_proxy_connect_timeout') %>;
-proxy_send_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_send_timeout') %>;
-proxy_read_timeout      <%= scope.lookupvar('nginx::params::nx_proxy_read_timeout') %>;
+client_body_buffer_size <%= scope.lookupvar('nginx::config::nx_client_body_buffer_size') %>;
+proxy_connect_timeout   <%= scope.lookupvar('nginx::config::nx_proxy_connect_timeout') %>;
+proxy_send_timeout      <%= scope.lookupvar('nginx::config::nx_proxy_send_timeout') %>;
+proxy_read_timeout      <%= scope.lookupvar('nginx::config::nx_proxy_read_timeout') %>;
 proxy_buffers           <%= @proxy_buffers %>;
 proxy_buffer_size       <%= @proxy_buffer_size %>;
 proxy_http_version      <%= @proxy_http_version %>;
