--- a/templates/vhost/vhost_ssl_footer.erb
+++ b/templates/vhost/vhost_ssl_footer.erb
@@ -26,8 +26,8 @@ include <%= file %>;
 }
 <% if @rewrite_www_to_non_www -%>
 server {
-  listen                <%= @listen_ip %>:<%= @ssl_port %> ssl;
-  server_name           www.<%= @name.gsub(/^www\./, '') %>;
-  rewrite               ^ https://<%= @name.gsub(/^www\./, '') %>$uri permanent;
+  listen       <%= @listen_ip %>:<%= @ssl_port %> ssl;
+  server_name  www.<%= @name.gsub(/^www\./, '') %>;
+  return       301 https://<%= @name.gsub(/^www\./, '') %>$uri;
 }
 <% end %>
