--- a/templates/vhost/location_header.erb
+++ b/templates/vhost/location_header.erb
@@ -1,4 +1,7 @@
   location <%= @location %> {
+<% if @internal -%>
+    internal;
+<% end -%>
 <% if @location_allow -%>
     <%- @location_allow.each do |allow_rule| -%>
     allow <%= allow_rule %>;
