--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -1,3 +1,5 @@
+proxy_temp_path         <%= @proxy_temp_path %>;
+client_body_temp_path   <%= @client_body_temp_path %>;
 proxy_redirect          <%= @proxy_redirect %>;
 client_max_body_size    <%= @client_max_body_size %>;
 client_body_buffer_size <%= @client_body_buffer_size %>;
