--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -1,8 +1,16 @@
+<% if @rewrite_www_to_non_www -%>
+server {
+  listen       <%= @listen_ip %>:<%= @ssl_port %> ssl;
+  server_name  www.<%= @name.gsub(/^www\./, '') %>;
+  return       301 https://<%= @name.gsub(/^www\./, '') %>$uri;
+}
+
+<% end %>
 server {
   listen       <%= @listen_ip %>:<%= @ssl_port %> <% if @ssl_listen_option %>ssl<% end %><% if @spdy == 'on' %> spdy<% end %><% if @listen_options %> <%= @listen_options %><% end %>;
-  <% if @ipv6_enable && (defined? @ipaddress6) %>
+  <%- if @ipv6_enable && (defined? @ipaddress6) %>
   listen [<%= @ipv6_listen_ip %>]:<%= @ssl_port %> ssl<% if @spdy == 'on' %> spdy<% end %><% if @ipv6_listen_options %> <%= @ipv6_listen_options %><% end %>;
-  <% end %>
+  <%- end %>
   server_name  <%= @rewrite_www_to_non_www ? @name.gsub(/^www\./, '') : @server_name.join(" ") %>;
 
   ssl on;
@@ -50,38 +58,51 @@ server {
 
   access_log            <%= @ssl_access_log_real %>;
   error_log             <%= @ssl_error_log_real %>;
-  
-<% if @vhost_cfg_prepend -%><% @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subvalue).each do |asubvalue| -%>
+
+<% if @vhost_cfg_prepend -%>
+  <%- @vhost_cfg_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
+    <%- if value.is_a?(Hash) -%>
+      <%- value.each do |subkey,subvalue| -%>
+        <%- Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= subkey %> <%= asubvalue %>;
-<% end -%>
-<% end -%><% else -%>
-<% Array(value).each do |asubvalue| -%>
+        <%- end -%>
+      <%- end -%>
+    <%- else -%>
+      <%- Array(value).each do |asubvalue| -%>
   <%= key %> <%= asubvalue %>;
+      <%- end -%>
+    <%- end -%>
+  <%- end -%>
 <% end -%>
-<% end -%>
-<% end -%><% end -%>
-<% if @vhost_cfg_ssl_prepend -%><% @vhost_cfg_ssl_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
-<% if value.is_a?(Hash) -%><% value.each do |subkey,subvalue| -%>
-<% Array(subvalue).each do |asubvalue| -%>
+<% if @vhost_cfg_ssl_prepend -%>
+  <%- @vhost_cfg_ssl_prepend.sort_by{ |k, v| k.to_s == 'allow' ? '' : k.to_s }.each do |key,value| -%>
+    <%- if value.is_a?(Hash) -%>
+      <%- value.each do |subkey,subvalue| -%>
+        <%- Array(subvalue).each do |asubvalue| -%>
   <%= key %> <%= subkey %> <%= asubvalue %>;
-<% end -%>
-<% end -%><% else -%>
-<% Array(value).each do |asubvalue| -%>
+        <%- end -%>
+      <%- end -%>
+    <%- else -%>
+      <%- Array(value).each do |asubvalue| -%>
   <%= key %> <%= asubvalue %>;
+      <%- end -%>
+    <%- end -%>
+  <%- end -%>
 <% end -%>
-<% end -%>
-<% end -%><% end -%>
+<% if @raw_prepend && Array(@raw_prepend).size > 0 %>
+  <%- Array(@raw_prepend).each do |line| -%>
+  <%= line %>
+  <%- end -%>
+<% end %>
 <% if @root -%>
   root <%= @root %>;
 <% end -%>
-<% if @passenger_cgi_param -%><% @passenger_cgi_param.each do |key,value| -%>
+<% Array(@passenger_cgi_param).each do |key,value| -%>
   passenger_set_cgi_param  <%= key %> <%= value %>;
-<% end -%><% end -%>
-<% @proxy_set_header.each do |header| -%>
+<% end -%>
+<% Array(@proxy_set_header).each do |header| -%>
   proxy_set_header        <%= header %>;
 <% end -%>
-<% if @add_header -%><% @add_header.each do |key,value| -%>
+<% Array(@add_header).each do |key,value| -%>
   add_header              <%= key %> <%= value %>;
-<% end -%><% end -%>
+<% end -%>
