--- a/templates/server/locations/headers.erb
+++ b/templates/server/locations/headers.erb
@@ -1,3 +1,11 @@
 <%- @add_header.keys.sort.each do |key| -%>
+    <%- if @add_header[key] -%>
+      <%- if @add_header[key].is_a?(Hash) -%>
+        <%- @add_header[key].each do |sk, sv| -%>
+    add_header "<%= key %>" <% if sk != '' %>"<%= sk %>"<% end %> <%= sv %>;
+        <%- end -%>
+      <%- else -%>
     add_header "<%= key %>" "<%= @add_header[key] %>";
+      <%- end -%>
+    <%- end -%>
 <%- end -%>
