--- a/templates/server/server_header.erb
+++ b/templates/server/server_header.erb
@@ -115,19 +115,7 @@ server {
 <% if Array(@resolver).count > 0 -%>
   resolver                  <% Array(@resolver).each do |r| %> <%= r %><% end %>;
 <% end -%>
-<% if @add_header -%>
-  <%- @add_header.keys.sort.each do |key| -%>
-    <%- if @add_header[key] -%>
-      <%- if @add_header[key].is_a?(Hash) -%>
-        <%- @add_header[key].each do |sk, sv| -%>
-  add_header              "<%= key %>" <% if sk != '' %>"<%= sk %>"<% end %> <%= sv %>;
-        <%- end -%>
-      <%- else -%>
-  add_header              "<%= key %>" "<%= @add_header[key] %>";
-      <%- end -%>
-    <%- end -%>
-  <%- end -%>
-<% end -%>
+<%= scope.function_template(["nginx/server/locations/headers.erb"]) %>
 <% if @maintenance -%>
   <%= @maintenance_value %>;
 <% end -%>
