--- a/templates/server/server_ssl_header.erb
+++ b/templates/server/server_ssl_header.erb
@@ -144,16 +144,4 @@ server {
 <% Array(@passenger_env_var).each do |key,value| -%>
   passenger_env_var  <%= key %> <%= value %>;
 <% end -%>
-<% if @add_header -%>
-  <%- @add_header.keys.sort.each do |key| -%>
-    <%- if @add_header[key] -%>
-      <%- if @add_header[key].is_a?(Hash) -%>
-        <%- @add_header[key].each do |sk, sv| -%>
-  add_header              "<%= key %>" <% if sk != '' %>"<%= sk %>"<% end %> <%= sv %>;
-        <%- end -%>
-      <%- else -%>
-  add_header              "<%= key %>" "<%= @add_header[key] %>";
-      <%- end -%>
-    <%- end -%>
-  <%- end -%>
-<% end -%>
+<%= scope.function_template(["nginx/server/locations/headers.erb"]) %>
