--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -91,6 +91,9 @@ http {
   tcp_nopush on;
   <%- end -%>
 <% end -%>
+<% if @resolver -%>
+  resolver<% @resolver['addresses'].each do |address,port| %> <%= address %><% if port %>:<%= port %><% end %><% end %><% if @resolver['valid'] %> valid=<%= @resolver['valid'] %><% end %><% if @resolver['ipv6'] %> ipv6=<%= @resolver['ipv6'] %><% end %>;
+<% end -%>
   server_tokens <%= @server_tokens %>;
 
   types_hash_max_size <%= @types_hash_max_size %>;
